# kennel

./: .clang-format  .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  installer.iss.in  kennel.workspace  macos-sign-app.sh
assets/: kennel.icns  make_ico.ps1  regen-icns.sh
scripts/: functions.rc
src/app/: AboutDialog.cpp  AboutDialog.hpp  AcceleratorInterceptor.cpp  AcceleratorInterceptor.h  AppUIGlobals.cpp  AppUIGlobals.hpp  AssetBootstrap.cpp  AssetBootstrap.h  AuiTabArt.h  AuiTabArtDefault.cpp  AuiTabArtMac.cpp  EditAgentDlg.cpp  EditAgentDlg.hpp  EditAgentsDlg.cpp  EditAgentsDlg.hpp  EditFileDlg.cpp  EditFileDlg.hpp  EditHosts.cpp  EditHosts.hpp  Editor.cpp  Editor.h  FileBrowserDlg.cpp  FileBrowserDlg.hpp  KennelApp.cpp  MainFrame.cpp  MainFrame.h  MainView.cpp  MainView.hpp  NewAgentWizard.cpp  NewAgentWizard.hpp  NewEnvVarDlg.cpp  NewEnvVarDlg.hpp  NotebookNavigationDlg.cpp  NotebookNavigationDlg.hpp  SessionGroup.cpp  SessionGroup.h  SessionPage.cpp  SessionPage.hpp  SettingsDlg.cpp  SettingsDlg.hpp  (+13 more)
src/core/: ActivityMonitor.cpp  ActivityMonitor.h  AdapterRegistry.cpp  AdapterRegistry.h  AppManager.cpp  AppManager.h  AppPaths.cpp  AppPaths.h  AwaitingInputDetector.cpp  AwaitingInputDetector.h  Bitmaps.cpp  Bitmaps.h  ClientAdapter.cpp  ClientAdapter.h  Config.cpp  Config.h  ConfigStore.cpp  ConfigStore.h  CrashHandler.cpp  CrashHandler.h  Helpers.cpp  Helpers.h  HostsStore.cpp  HostsStore.h  JsonUtil.cpp  JsonUtil.h  KennelRemote.cpp  KennelRemote.h  Logger.cpp  Logger.h  Process.cpp  Process.hpp  SshConfigParser.cpp  SshConfigParser.h  Status.h  UiPrefs.h  UiPrefsStore.cpp  UiPrefsStore.h  UpdateChecker.cpp  UpdateChecker.h  (+8 more)
